--- a/cangaroolabs/src/App.scss
+++ b/cangaroolabs/src/App.scss
@@ -1,15 +1,6 @@
-.section1{
-    position: relative;
-    width: 1440px;
-    height: 4848px;
-    overflow-y: scroll;
-    background: #FFFFFF;
-    }
-.section2{
+body{
     position: absolute;
-    width: 1440px;
-    height: 1155px;
-    left: 0px;
-    top: 686px;
-    background: #1F1D1D;
+    margin:0;
+    padding:0;
+    background-color:#1F1D1D;
 }
