--- a/cangaroolabs/src/App.scss
+++ b/cangaroolabs/src/App.scss
@@ -4,3 +4,19 @@ body{
     padding:0;
     background-color:#1F1D1D;
 }
+.section2{
+    position: absolute;
+    width: 1440px;
+    height: 1155px;
+    left: 0px;
+    top: 686px;
+    background: #1F1D1D;
+}
+.section3{
+    position: absolute;
+    width: 2000px;
+    height: 652px;
+    left: 0px;
+    top: 1841px;
+    background: #000000;
+}
