--- a/cangaroolabs/src/App.scss
+++ b/cangaroolabs/src/App.scss
@@ -20,3 +20,37 @@ body{
     top: 1841px;
     background: #000000;
 }
+.section4{
+position: absolute;
+width: 1440px;
+height: 1240px;
+left: 0px;
+top: 2490px;
+background: #1F1D1D;
+}
+.section5{
+position: absolute;
+width: 2000px;
+height: 740px;
+left: 0px;
+top: 3729px;
+background: #000000;
+}
+.text{
+
+position: absolute;
+width: 285px;
+height: 47px;
+left: calc(50% - 285px/2 + 5.5px);
+top: 738px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 39px;
+line-height: 120%;
+
+color: #F2B236;
+
+
+}
