--- a/cangaroolabs/src/App.css
+++ b/cangaroolabs/src/App.css
@@ -13,7 +13,7 @@
     height: 652px;
     left: 0px;
     top: 1841px;
-    background: #000000;
+    background:black;
 }
 .section4{
 position: absolute;
@@ -29,7 +29,7 @@ width: 2000px;
 height: 740px;
 left: 0px;
 top: 3729px;
-background: #000000;
+background:Black;
 }
 index.css
 
