--- a/cangaroolabs/src/components/Hompage/Homepage.css
+++ b/cangaroolabs/src/components/Hompage/Homepage.css
@@ -6,3 +6,13 @@ left: 9px;
 top: 0px;
 background-color:black;
 }
+.can{
+
+
+position: absolute;
+width: 377px;
+height: 566px;
+left: calc(50% - 377px/2 + 335.5px);
+top: 120px;
+
+}
