--- a/cangaroolabs/src/components/Hompage/Homepage.css
+++ b/cangaroolabs/src/components/Hompage/Homepage.css
@@ -14,3 +14,10 @@ margin-left:1300px;
 margin-top: 120px;
 
 }
+.can2{
+position:relative;
+width: 200px;
+height: 100px;
+margin-left:500px;
+margin-top: 250px;
+}
