--- a/cangaroolabs/src/components/Hompage/Homepage.css
+++ b/cangaroolabs/src/components/Hompage/Homepage.css
@@ -7,17 +7,18 @@ top: 0px;
 background-color:black;
 }
 .can{
-position:relative;
+/* position:relative; */
 width: 200px;
 height: 2000px;
 margin-left:1300px;
-margin-top: 120px;
+margin-top: -150px;
 
 }
 .can2{
 position:relative;
 width: 200px;
 height: 100px;
-margin-left:500px;
-margin-top: 250px;
+margin-left:360px;
+margin-top: 150px;
+color: white;
 }
