--- a/cangaroolabs/src/App.css
+++ b/cangaroolabs/src/App.css
@@ -38,6 +38,21 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 22px;
 }
+.icons{
+width: 110px;
+height: 110px;
+left: 365px;
+top: 500px;
+mix-blend-mode: hard-light;
+}
+.icons2{
+width: 110px;
+height: 110px;
+left: 365px;
+top: 500px;
+mix-blend-mode:luminosity;
+
+}
 .section3{
     position: absolute;
     width: 2000px;
