--- a/cangaroolabs/src/components/Header/Header.css
+++ b/cangaroolabs/src/components/Header/Header.css
@@ -9,6 +9,7 @@
     padding: 1rem;
     padding-bottom: 1 rem;
     color: var(--secondary);
+    mix-blend-mode: hard-light;
 }
 .h-menu{
     gap: 2rem;
