--- a/cangaroolabs/src/App.css
+++ b/cangaroolabs/src/App.css
@@ -30,8 +30,6 @@
     height: 370.73px;
     background-color: #312E2E;
     display: flex;
-    align-items: center;
-    justify-content: center;
     color: #fff;
     font-weight: bold;
     margin: 20px;
@@ -39,19 +37,30 @@
     border-radius: 22px;
 }
 .icons{
+margin-top:40px;
+margin-left:80px;
 width: 110px;
 height: 110px;
-left: 365px;
-top: 500px;
 mix-blend-mode: hard-light;
 }
 .icons2{
+margin-top:40px;
+margin-left:80px;
 width: 110px;
 height: 110px;
-left: 365px;
-top: 500px;
 mix-blend-mode:luminosity;
 
+}
+.t1{
+margin-top:200px;
+margin-left:-150px;;
+width: 246.54px;
+height: 27.8px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 25px;
+color: #FFFFFF;
 }
 .section3{
     position: absolute;
