--- a/cangaroolabs/src/App.css
+++ b/cangaroolabs/src/App.css
@@ -1,7 +1,7 @@
 
 .section2{
   position:absolute;
-    width:100%;
+  width:99%;
     height: 1155px;
     top: 686px;
     background: #1F1D1D;
@@ -33,8 +33,9 @@
     color: #fff;
     font-weight: bold;
     margin: 20px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 22px;
+    
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(242, 178,54,100%);
 }
 .icons{
 margin-top:40px;
